<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.home.Home"
        android:label="@string/title_home"
        tools:layout="@layout/activity_author_index" />

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.example.myapplication.forum.Forum"
        android:label="@string/title_forum"
        tools:layout="@layout/forum_fragment" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.myapplication.account.Account"
        android:label="@string/title_account"
        tools:layout="@layout/activity_author_account" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.myapplication.favorite.Favorite"
        android:label="@string/title_favorite"
        tools:layout="@layout/activity_author_account" />
</navigation>