<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.Signup_OrganizerActivity">


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="32dp">
        android:layout_gravity="center"


        <EditText
            android:id="@+id/userid"
            android:layout_width="245dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="24dp"
            android:alpha="0.7"
            android:autofillHints="@string/prompt_name"
            android:background="@drawable/login_edit"
            android:hint="@string/prompt_name"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:selectAllOnFocus="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/userpassword"
            android:layout_width="245dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:alpha="0.7"
            android:autofillHints="@string/prompt_password"
            android:background="@drawable/login_edit"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:selectAllOnFocus="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/userrepassword"
            android:layout_width="245dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:alpha="0.7"
            android:autofillHints="@string/prompt_repassword"
            android:background="@drawable/login_edit"
            android:hint="@string/prompt_repassword"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:selectAllOnFocus="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/useroffmail"
            android:layout_width="245dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:alpha="0.7"
            android:autofillHints="@string/prompt_password"
            android:background="@drawable/login_edit"
            android:hint="@string/prompt_officialmail"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:selectAllOnFocus="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <Button
            android:id="@+id/signin"
            android:layout_width="118dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/blue_btn"
            android:enabled="true"
            android:onClick="gotologin_o"
            android:text="@string/action_finish"
            android:textColor="@color/white"
            tools:ignore="OnClick"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="584dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>