<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_back"
    tools:context=".ui.login.Login_AuthorActivity">


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="52dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        android:layout_gravity="center"


        <EditText
            android:id="@+id/userid"
            android:layout_width="245dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginTop="448dp"
            android:layout_marginEnd="24dp"
            android:alpha="0.7"
            android:autofillHints="@string/prompt_id"
            android:background="@drawable/login_edit"
            android:hint="@string/prompt_id"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:selectAllOnFocus="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="245dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:alpha="0.7"
            android:autofillHints="@string/prompt_password"
            android:background="@drawable/login_edit"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:selectAllOnFocus="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />


        <LinearLayout
            android:layout_width="244dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/signin"
                android:layout_width="118dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginRight="8dp"
                android:background="@drawable/blue_btn"
                android:onClick="singin"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="584dp" />

            <Button
                android:id="@+id/signup"
                android:layout_width="118dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:background="@drawable/round_btn"
                android:onClick="gotosignup_a"
                android:text="@string/action_sign_up_short"
                android:textColor="@color/gray"
                tools:layout_editor_absoluteX="233dp"
                tools:layout_editor_absoluteY="584dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>