<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="375dp"
    android:layout_height="190dp"
    android:paddingHorizontal="15dp"
    android:paddingTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:background="@drawable/item_back"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="105dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_launcher_background" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="88dp"
            android:layout_height="105dp"
            android:orientation="horizontal"
            android:paddingHorizontal="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_starttime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Feb 8, 2021"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="|"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_endtime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Feb 10, 2021"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:text="IVAPP 2021 : 12th International Conference on Information Visualization Theory and Applications"
                    android:textSize="11sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginVertical="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_method"
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="3dp"
                    android:text="Online Sreaming"
                    android:textSize="12sp"
                    app:drawableLeftCompat="@drawable/ic_pin"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/item_state2"
                    android:layout_width="53dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/state_warning"
                    android:text="@string/warning"
                    android:textAlignment="center"
                    android:paddingVertical="5dp"
                    android:textColor="@color/white"
                    android:textSize="9sp"
                    tools:ignore="RtlCompat,SmallSp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/subtitel"
                    android:layout_width="115dp"
                    android:layout_height="30dp"
                    android:text="Submission Deadline:"
                    android:textSize="11.5sp" />

                <TextView
                    android:id="@+id/item_subdeadline"
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    android:text="Oct 29, 2020"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_height="0.5dip"
        android:background="#686868"
        android:layout_width="match_parent"
        android:layout_marginVertical="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="255dp"
            android:layout_height="50dp"
            android:layout_marginRight="21dp"
            android:layout_marginTop="3dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:paddingBottom = "5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/c1"
                    android:paddingVertical="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/category_btn"
                    android:text="@string/menu_artificial_intelligence"
                    android:textAlignment="center"
                    android:textColor="@color/heavy_gray"
                    android:textSize="12sp"
                     />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/c2"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingVertical="1dp"
                    android:layout_marginRight="5dp"
                    android:maxWidth="130sp"
                    android:background="@drawable/category_btn"
                    android:text="@string/menu_information_technology"
                    android:textAlignment="center"
                    android:textColor="@color/heavy_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/c3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingVertical="1dp"
                    android:maxWidth="130sp"
                    android:background="@drawable/category_btn"
                    android:text="1235645666666"
                    android:textAlignment="center"
                    android:textColor="@color/heavy_gray"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="7dp"
            android:orientation="horizontal"
            >
            <ImageButton
                android:id="@+id/btn_share"
                android:src="@drawable/ic_share"
                android:background = "#ffffff"
                android:layout_width="35dp"
                android:layout_height="35dp"
                />
            <ImageButton
                android:id="@+id/btn_favorite"
                android:src="@drawable/ic_favorite"
                android:background = "#ffffff"
                android:layout_width="35dp"
                android:layout_height="35dp"
                />
        </LinearLayout>



    </LinearLayout>


</LinearLayout>